Fixed issue where scroller elements were wrapping

--- a/src/ohj/ui/css/ohscroll.css
+++ b/src/ohj/ui/css/ohscroll.css
@@ -45,7 +45,6 @@
 .ohscroll-hscroll .ohscroll-scroller li
 {
     display: inline-block;
-    float:left;
     text-align:center;
     cursor:pointer;
 }
